<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Behavioral Authentication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_unencrypt">Test (unencrypted)</string>
    <string name="test_encrypt">Test (encrypted)</string>
    <string name="model_test_success">Success</string>
    <string name="model_test_failure">Alarm</string>
    <string name="model_checks_left_label">Model Checks Left:</string>
    <string name="send_test_message">Send Test Message:</string>
    <string name="model_check_test_label">Simulate Model Tests</string>
    <string name="btn_unencrypt_onclick">btn_unencrypt_onclick</string>
    <string name="btn_encrypt_onclick">btn_encrypt_onclick</string>
    <string name="btn_success_onclick">btn_success_onclick</string>
    <string name="btn_alarm_onclick">btn_alarm_onclick</string>

</resources>
