<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DemoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_test_message" />

    <Button
        android:id="@+id/btn_test_unencrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:onClick="@string/btn_unencrypt_onclick"
        android:text="@string/test_unencrypt" />

    <Button
        android:id="@+id/btn_test_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_test_unencrypt"
        android:layout_toRightOf="@+id/btn_test_unencrypt"
        android:onClick="@string/btn_encrypt_onclick"
        android:text="@string/test_encrypt" />

    <TextView
        android:id="@+id/text_model_checks_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="@dimen/checks_remaining_left_margin"
        android:layout_toRightOf="@+id/textView2"
        android:text="9"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_success"
        android:layout_toRightOf="@+id/btn_success"
        android:onClick="@string/btn_alarm_onclick"
        android:text="@string/model_test_failure" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_test_unencrypt"
        android:layout_below="@+id/btn_test_unencrypt"
        android:text="@string/model_check_test_label" />

    <Button
        android:id="@+id/btn_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:onClick="@string/btn_success_onclick"
        android:text="@string/model_test_success" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_success"
        android:layout_below="@+id/btn_alarm"
        android:layout_marginTop="14dp"
        android:text="@string/model_checks_left_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="TextView" />

</RelativeLayout>